Refactor code structure for improved readability and maintainability

--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -3,13 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3efc8e4",
+   "id": "6fea218b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "\n",
-    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
    ]
   }
  ],
