--- a/o_linreg.ipynb
+++ b/o_linreg.ipynb
@@ -346,6 +346,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5bd23d1",
+   "metadata": {},
+   "source": [
+    "![](https://thirdspacelearning.com/wp-content/uploads/2021/08/ymxc-What-is.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e301cc3a",
    "metadata": {},
    "source": [
@@ -1663,11 +1671,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "9ae7bdf7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# joblib is another library that can be used for model serialization.\n",
+    "# It is often faster than pickle for large numpy arrays.\n",
     "# Streamlit is generally used for building web applications for machine learning models."
    ]
   }
