--- a/g_pandas.ipynb
+++ b/g_pandas.ipynb
@@ -5428,92 +5428,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Email</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Alice</td>\n",
-       "      <td>alice@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Bob</td>\n",
-       "      <td>bob@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>charlie@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>John</td>\n",
-       "      <td>john@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Eva</td>\n",
-       "      <td>eva@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Frank</td>\n",
-       "      <td>frank@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Ben</td>\n",
-       "      <td>ben@outlook.com</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   CustomerID     Name              Email\n",
-       "0           1    Alice    alice@gmail.com\n",
-       "1           2      Bob      bob@gmail.com\n",
-       "2           3  Charlie  charlie@gmail.com\n",
-       "3           4     John     john@gmail.com\n",
-       "4           5      Eva      eva@gmail.com\n",
-       "5           6    Frank    frank@gmail.com\n",
-       "6           7      Ben    ben@outlook.com"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Vertical Concatenations\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m vertical = \u001b[43mpd\u001b[49m.concat([customers, customers2])\n\u001b[32m      3\u001b[39m vertical\n",
+      "\u001b[31mNameError\u001b[39m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
