Add Streamlit app for model predictions and save model functionality

--- a/assignments/assignemnt_8(1).ipynb
+++ b/assignments/assignemnt_8(1).ipynb
@@ -1244,11 +1244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "bc0a24c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# making a pickle file\n",
+    "import pickle \n",
+    "\n",
+    "with open(\"./models/concrete_strength_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(model, f)"
+   ]
   }
  ],
  "metadata": {
