--- a/assignments/assignment_8(2).ipynb
+++ b/assignments/assignment_8(2).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "id": "6de134da",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "id": "49a420a3",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "9  cellular   17   apr       313         1    147         2  failure  no  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "id": "86b382d2",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "id": "6e4dac35",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
        "max     871.000000    25.000000  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "id": "6d5b7608",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "id": "695adb90",
    "metadata": {},
    "outputs": [],
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 23,
    "id": "ea4b6db2",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "Text(0.5, 1.0, 'Boxplot of Balance')"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 24,
    "id": "fa8ad16d",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
        "Text(0.5, 1.0, 'Boxplot of Balance after removing outliers')"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 25,
    "id": "ba0df306",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 26,
    "id": "dd129df2",
    "metadata": {},
    "outputs": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 27,
    "id": "c8cba804",
    "metadata": {},
    "outputs": [],
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "id": "ae76a918",
    "metadata": {},
    "outputs": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 29,
    "id": "d00be646",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 30,
    "id": "f4c655bd",
    "metadata": {},
    "outputs": [],
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 31,
    "id": "d6350e8c",
    "metadata": {},
    "outputs": [
@@ -873,6 +873,122 @@
     "print(f\"Precision: {precision}\")\n",
     "print(f\"Recall: {recall}\")\n",
     "print(f\"F1 Score: {f1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "fa8552a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open(\"./models/bank_marketing_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(model, f)   \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2c5b38c",
+   "metadata": {},
+   "source": [
+    "# Build and Save a Preprocessing Pipeline\n",
+    "This section rebuilds the logistic regression using a full sklearn Pipeline (encoders + scaler + model) and saves it to `./models/bank_marketing_model.pkl`. Run this and then use the Streamlit app with raw inputs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "abf937e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline Accuracy: 0.8917\n",
+      "Pipeline Precision: 0.6154\n",
+      "Pipeline Recall: 0.1538\n",
+      "Pipeline F1: 0.2462\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create and save a preprocessing + model Pipeline for deployment\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder, StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "import pickle\n",
+    "\n",
+    "# Use the original raw dataframe `df` loaded earlier\n",
+    "# Drop columns not used during training\n",
+    "X_raw = df.drop(columns=[\"day\", \"duration\", \"y\"]).copy()\n",
+    "y_raw = df[\"y\"].copy()\n",
+    "\n",
+    "# Target to binary 0/1 to match earlier label encoding\n",
+    "# ('no' -> 0, 'yes' -> 1)\n",
+    "y_raw = (y_raw == \"yes\").astype(int)\n",
+    "\n",
+    "# Define columns by type\n",
+    "numeric_cols = [\"age\", \"balance\", \"campaign\", \"pdays\", \"previous\"]\n",
+    "binary_cols = [\"default\", \"housing\", \"loan\"]\n",
+    "ortho_cols = [\"contact\", \"marital\", \"month\", \"poutcome\"]\n",
+    "ordinal_cols = [\"job\", \"education\"]\n",
+    "\n",
+    "# Explicit category orders to ensure stable encoding\n",
+    "job_order = [\n",
+    "    \"admin.\", \"blue-collar\", \"entrepreneur\", \"housemaid\", \"management\",\n",
+    "    \"retired\", \"self-employed\", \"services\", \"student\", \"technician\",\n",
+    "    \"unemployed\", \"unknown\"\n",
+    "]\n",
+    "education_order = [\"primary\", \"secondary\", \"tertiary\", \"unknown\"]\n",
+    "\n",
+    "# Known categories for one-hot/binary\n",
+    "contact_cats = [\"cellular\", \"telephone\", \"unknown\"]\n",
+    "marital_cats = [\"divorced\", \"married\", \"single\"]\n",
+    "month_cats = [\"apr\", \"aug\", \"dec\", \"feb\", \"jan\", \"jul\", \"jun\", \"mar\", \"may\", \"nov\", \"oct\", \"sep\"]\n",
+    "poutcome_cats = [\"failure\", \"other\", \"success\", \"unknown\"]\n",
+    "\n",
+    "# ColumnTransformer with scaling + encoding\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"num\", StandardScaler(), numeric_cols),\n",
+    "        (\"bin\", OrdinalEncoder(categories=[[\"no\", \"yes\"], [\"no\", \"yes\"], [\"no\", \"yes\"]]), binary_cols),\n",
+    "        (\"ord\", OrdinalEncoder(categories=[job_order, education_order]), ordinal_cols),\n",
+    "        (\"onehot\", OneHotEncoder(categories=[contact_cats, marital_cats, month_cats, poutcome_cats], drop=\"first\", handle_unknown=\"ignore\"), ortho_cols),\n",
+    "    ],\n",
+    "    remainder=\"drop\",\n",
+    ")\n",
+    "\n",
+    "pipe = Pipeline(steps=[\n",
+    "    (\"preprocess\", preprocessor),\n",
+    "    (\"model\", LogisticRegression(max_iter=1000))\n",
+    "])\n",
+    "\n",
+    "X_train_raw, X_test_raw, y_train_raw, y_test_raw = train_test_split(\n",
+    "    X_raw, y_raw, test_size=0.2, random_state=42, stratify=y_raw\n",
+    ")\n",
+    "\n",
+    "pipe.fit(X_train_raw, y_train_raw)\n",
+    "\n",
+    "# Quick evaluation\n",
+    "y_pred_raw = pipe.predict(X_test_raw)\n",
+    "acc = accuracy_score(y_test_raw, y_pred_raw)\n",
+    "prec = precision_score(y_test_raw, y_pred_raw)\n",
+    "rec = recall_score(y_test_raw, y_pred_raw)\n",
+    "f1 = f1_score(y_test_raw, y_pred_raw)\n",
+    "print(f\"Pipeline Accuracy: {acc:.4f}\")\n",
+    "print(f\"Pipeline Precision: {prec:.4f}\")\n",
+    "print(f\"Pipeline Recall: {rec:.4f}\")\n",
+    "print(f\"Pipeline F1: {f1:.4f}\")\n",
+    "\n",
+    "# Save the full pipeline (preprocessing + model)\n",
+    "with open(\"./models/bank_marketing_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(pipe, f)\n"
    ]
   }
  ],
