Add initial Jupyter notebook for PCA implementation using Pandas

--- a/assignments/assignment_8(2).ipynb
+++ b/assignments/assignment_8(2).ipynb
@@ -877,124 +877,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "fa8552a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "model_data = {\n",
+    "    \"model\" : model,\n",
+    "    \"scaler\" : scaler,\n",
+    "    \"label_encoder\" : label_encoder,\n",
+    "    \"ordinal_encoder\" : ordinal_encoder,\n",
+    "}\n",
     "with open(\"./models/bank_marketing_model.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(model, f)   \n",
+    "    pickle.dump(model_data, f)   \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d2c5b38c",
-   "metadata": {},
-   "source": [
-    "# Build and Save a Preprocessing Pipeline\n",
-    "This section rebuilds the logistic regression using a full sklearn Pipeline (encoders + scaler + model) and saves it to `./models/bank_marketing_model.pkl`. Run this and then use the Streamlit app with raw inputs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "abf937e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline Accuracy: 0.8917\n",
-      "Pipeline Precision: 0.6154\n",
-      "Pipeline Recall: 0.1538\n",
-      "Pipeline F1: 0.2462\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create and save a preprocessing + model Pipeline for deployment\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder, StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "import pickle\n",
-    "\n",
-    "# Use the original raw dataframe `df` loaded earlier\n",
-    "# Drop columns not used during training\n",
-    "X_raw = df.drop(columns=[\"day\", \"duration\", \"y\"]).copy()\n",
-    "y_raw = df[\"y\"].copy()\n",
-    "\n",
-    "# Target to binary 0/1 to match earlier label encoding\n",
-    "# ('no' -> 0, 'yes' -> 1)\n",
-    "y_raw = (y_raw == \"yes\").astype(int)\n",
-    "\n",
-    "# Define columns by type\n",
-    "numeric_cols = [\"age\", \"balance\", \"campaign\", \"pdays\", \"previous\"]\n",
-    "binary_cols = [\"default\", \"housing\", \"loan\"]\n",
-    "ortho_cols = [\"contact\", \"marital\", \"month\", \"poutcome\"]\n",
-    "ordinal_cols = [\"job\", \"education\"]\n",
-    "\n",
-    "# Explicit category orders to ensure stable encoding\n",
-    "job_order = [\n",
-    "    \"admin.\", \"blue-collar\", \"entrepreneur\", \"housemaid\", \"management\",\n",
-    "    \"retired\", \"self-employed\", \"services\", \"student\", \"technician\",\n",
-    "    \"unemployed\", \"unknown\"\n",
-    "]\n",
-    "education_order = [\"primary\", \"secondary\", \"tertiary\", \"unknown\"]\n",
-    "\n",
-    "# Known categories for one-hot/binary\n",
-    "contact_cats = [\"cellular\", \"telephone\", \"unknown\"]\n",
-    "marital_cats = [\"divorced\", \"married\", \"single\"]\n",
-    "month_cats = [\"apr\", \"aug\", \"dec\", \"feb\", \"jan\", \"jul\", \"jun\", \"mar\", \"may\", \"nov\", \"oct\", \"sep\"]\n",
-    "poutcome_cats = [\"failure\", \"other\", \"success\", \"unknown\"]\n",
-    "\n",
-    "# ColumnTransformer with scaling + encoding\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        (\"num\", StandardScaler(), numeric_cols),\n",
-    "        (\"bin\", OrdinalEncoder(categories=[[\"no\", \"yes\"], [\"no\", \"yes\"], [\"no\", \"yes\"]]), binary_cols),\n",
-    "        (\"ord\", OrdinalEncoder(categories=[job_order, education_order]), ordinal_cols),\n",
-    "        (\"onehot\", OneHotEncoder(categories=[contact_cats, marital_cats, month_cats, poutcome_cats], drop=\"first\", handle_unknown=\"ignore\"), ortho_cols),\n",
-    "    ],\n",
-    "    remainder=\"drop\",\n",
-    ")\n",
-    "\n",
-    "pipe = Pipeline(steps=[\n",
-    "    (\"preprocess\", preprocessor),\n",
-    "    (\"model\", LogisticRegression(max_iter=1000))\n",
-    "])\n",
-    "\n",
-    "X_train_raw, X_test_raw, y_train_raw, y_test_raw = train_test_split(\n",
-    "    X_raw, y_raw, test_size=0.2, random_state=42, stratify=y_raw\n",
-    ")\n",
-    "\n",
-    "pipe.fit(X_train_raw, y_train_raw)\n",
-    "\n",
-    "# Quick evaluation\n",
-    "y_pred_raw = pipe.predict(X_test_raw)\n",
-    "acc = accuracy_score(y_test_raw, y_pred_raw)\n",
-    "prec = precision_score(y_test_raw, y_pred_raw)\n",
-    "rec = recall_score(y_test_raw, y_pred_raw)\n",
-    "f1 = f1_score(y_test_raw, y_pred_raw)\n",
-    "print(f\"Pipeline Accuracy: {acc:.4f}\")\n",
-    "print(f\"Pipeline Precision: {prec:.4f}\")\n",
-    "print(f\"Pipeline Recall: {rec:.4f}\")\n",
-    "print(f\"Pipeline F1: {f1:.4f}\")\n",
-    "\n",
-    "# Save the full pipeline (preprocessing + model)\n",
-    "with open(\"./models/bank_marketing_model.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(pipe, f)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
